--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     </a>
     <header>
         <h1>Predict whether an image is of a cat or a dog</h1>
-        <a href="https://github.com/hoangnguyen719/dog-cat-classifier-page" target="_blank">Source Github Repo</a>
+        <a href="https://github.com/hoangnguyen719/dog-cat-classifier-page" target="_blank">Source GitHub Repo</a>
         <p>
           Model provided by <a href="https://course.fast.ai/Lessons/lesson2.html">fastai</a>
           , API hosted by <a href="https://huggingface.co/spaces/hoangng719/dog-cat-classifier" target="_blank">hugging face</a>
